// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-navbar> Component <bolt-navbar> centered with 4 short links 1`] = `
<nav data-bolt-more-text="More"
     aria-labelledby="js-bolt-navbar-title-12345"
     class="c-bolt-navbar c-bolt-navbar--auto-width c-bolt-navbar--center c-bolt-navbar--spacing-small t-bolt-xdark"
>
  <div class="c-bolt-navbar__inner">
    <h1 class="c-bolt-navbar__title">
      <div class="c-bolt-navbar__title-inner">
        <span class="c-bolt-navbar__title-icon">
          <bolt-icon name="bolt-logo-colored"
                     size="large"
                     aria-hidden="true"
          >
            <span class="c-bolt-icon c-bolt-icon--bolt-logo-colored c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 198 182"
              >
                <g fill="none"
                   fill-rule="evenodd"
                >
                  <path fill="#FFCC4C"
                        d="M72.8 49h52.5c1 0 1.7.8 1.7 1.8v31.5c0 1-.8 1.7-1.8 1.7H72.7c-1 0-1.7-.8-1.7-1.7V50.8c0-1 .8-1.8 1.8-1.8z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M1 78.8l16.7-29c.3-.5 1-.8 1.5-.8h36c1 0 1.8.8 1.8 1.8v31.5c0 1-.8 1.7-1.8 1.7H4.1a3.5 3.5 0 01-3-5.2z"
                  >
                  </path>
                  <path fill="#E1E2EB"
                        d="M141 82.3V50.8c0-1 .8-1.8 1.7-1.8h36c.7 0 1.3.3 1.6.9l16.6 28.9a3.5 3.5 0 01-3 5.2h-51.2c-1 0-1.7-.8-1.7-1.7z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M85 1.8v31.4c0 1-.8 1.8-1.8 1.8H29.4a1.8 1.8 0 01-1.5-2.6L42.5 7a14 14 0 0112-7h28.8c1 0 1.7.8 1.7 1.8z"
                  >
                  </path>
                  <path fill="#FFCC4C"
                        d="M100.8 0h42.6c5 0 9.6 2.7 12.1 7l14.7 25.4a1.7 1.7 0 01-1.5 2.6h-68c-1 0-1.7-.8-1.7-1.7V1.8c0-1 .8-1.8 1.8-1.8z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M42.5 175l-14.7-25.4a1.8 1.8 0 011.5-2.6h68c1 0 1.7.8 1.7 1.8v31.4c0 1-.8 1.8-1.8 1.8H54.6a14 14 0 01-12.1-7z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M114.7 147h54a1.8 1.8 0 011.5 2.6L155.5 175a14 14 0 01-12 7h-28.8c-1 0-1.7-.8-1.7-1.7v-31.5c0-1 .8-1.8 1.7-1.8z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M71 99.8v31.5c0 1-.8 1.7-1.8 1.7h-50c-.6 0-1.2-.3-1.5-.9L1.1 103.2A3.5 3.5 0 014 98h65.1c1 0 1.8.8 1.8 1.7z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M86.7 98H194a3.5 3.5 0 013 5.2l-16.6 29c-.3.5-1 .8-1.5.8h-92c-1 0-1.8-.8-1.8-1.8V99.8c0-1 .8-1.8 1.7-1.8z"
                  >
                  </path>
                </g>
              </svg>
            </span>
          </bolt-icon>
        </span>
        <span id="js-bolt-navbar-title-12345"
              class="c-bolt-navbar__title-text c-bolt-navbar__title-text--hide-from-xsmall-bp"
        >
          Go to
        </span>
      </div>
    </h1>
    <div class="c-bolt-navbar__list-wrapper js-bolt-navbar__list-wrapper">
      Array
    </div>
  </div>
</nav>
`;

exports[`<bolt-navbar> Component <bolt-navbar> variable width 1`] = `
<div class="o-bolt-grid o-bolt-grid--center">
  <div class="o-bolt-grid__cell u-bolt-width-2/3 u-bolt-width-1/2@small">
    <nav data-bolt-more-text="More"
         class="c-bolt-navbar c-bolt-navbar--auto-width c-bolt-navbar--center c-bolt-navbar--spacing-small t-bolt-dark"
    >
      <div class="c-bolt-navbar__inner">
        <div class="c-bolt-navbar__title">
          <div class="c-bolt-navbar__title-inner">
            <span class="c-bolt-navbar__title-text c-bolt-navbar__title-text--hide-from-xsmall-bp">
              Go to
            </span>
          </div>
        </div>
        <div class="c-bolt-navbar__list-wrapper js-bolt-navbar__list-wrapper">
          Array
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`<bolt-navbar> Component <bolt-navbar> with 4 short links 1`] = `
<nav data-bolt-more-text="More"
     aria-labelledby="js-bolt-navbar-title-12345"
     class="c-bolt-navbar c-bolt-navbar--auto-width c-bolt-navbar--spacing-small t-bolt-xdark"
>
  <div class="c-bolt-navbar__inner">
    <h1 class="c-bolt-navbar__title">
      <div class="c-bolt-navbar__title-inner">
        <span class="c-bolt-navbar__title-icon">
          <bolt-icon name="bolt-logo-colored"
                     size="large"
                     aria-hidden="true"
          >
            <span class="c-bolt-icon c-bolt-icon--bolt-logo-colored c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 198 182"
              >
                <g fill="none"
                   fill-rule="evenodd"
                >
                  <path fill="#FFCC4C"
                        d="M72.8 49h52.5c1 0 1.7.8 1.7 1.8v31.5c0 1-.8 1.7-1.8 1.7H72.7c-1 0-1.7-.8-1.7-1.7V50.8c0-1 .8-1.8 1.8-1.8z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M1 78.8l16.7-29c.3-.5 1-.8 1.5-.8h36c1 0 1.8.8 1.8 1.8v31.5c0 1-.8 1.7-1.8 1.7H4.1a3.5 3.5 0 01-3-5.2z"
                  >
                  </path>
                  <path fill="#E1E2EB"
                        d="M141 82.3V50.8c0-1 .8-1.8 1.7-1.8h36c.7 0 1.3.3 1.6.9l16.6 28.9a3.5 3.5 0 01-3 5.2h-51.2c-1 0-1.7-.8-1.7-1.7z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M85 1.8v31.4c0 1-.8 1.8-1.8 1.8H29.4a1.8 1.8 0 01-1.5-2.6L42.5 7a14 14 0 0112-7h28.8c1 0 1.7.8 1.7 1.8z"
                  >
                  </path>
                  <path fill="#FFCC4C"
                        d="M100.8 0h42.6c5 0 9.6 2.7 12.1 7l14.7 25.4a1.7 1.7 0 01-1.5 2.6h-68c-1 0-1.7-.8-1.7-1.7V1.8c0-1 .8-1.8 1.8-1.8z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M42.5 175l-14.7-25.4a1.8 1.8 0 011.5-2.6h68c1 0 1.7.8 1.7 1.8v31.4c0 1-.8 1.8-1.8 1.8H54.6a14 14 0 01-12.1-7z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M114.7 147h54a1.8 1.8 0 011.5 2.6L155.5 175a14 14 0 01-12 7h-28.8c-1 0-1.7-.8-1.7-1.7v-31.5c0-1 .8-1.8 1.7-1.8z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M71 99.8v31.5c0 1-.8 1.7-1.8 1.7h-50c-.6 0-1.2-.3-1.5-.9L1.1 103.2A3.5 3.5 0 014 98h65.1c1 0 1.8.8 1.8 1.7z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M86.7 98H194a3.5 3.5 0 013 5.2l-16.6 29c-.3.5-1 .8-1.5.8h-92c-1 0-1.8-.8-1.8-1.8V99.8c0-1 .8-1.8 1.7-1.8z"
                  >
                  </path>
                </g>
              </svg>
            </span>
          </bolt-icon>
        </span>
        <span id="js-bolt-navbar-title-12345"
              class="c-bolt-navbar__title-text c-bolt-navbar__title-text--hide-from-xsmall-bp"
        >
          Go to
        </span>
      </div>
    </h1>
    <div class="c-bolt-navbar__list-wrapper js-bolt-navbar__list-wrapper">
      Array
    </div>
  </div>
</nav>
`;

exports[`<bolt-navbar> Component <bolt-navbar> with 6 lengthy links 1`] = `
<nav data-bolt-more-text="More"
     aria-labelledby="js-bolt-navbar-title-12345"
     class="c-bolt-navbar c-bolt-navbar--spacing-small t-bolt-dark"
>
  <div class="c-bolt-navbar__inner">
    <h2 class="c-bolt-navbar__title">
      <div class="c-bolt-navbar__title-inner">
        <span class="c-bolt-navbar__title-icon">
          <bolt-icon name="marketing-gray"
                     size="large"
                     aria-hidden="true"
          >
            <span class="c-bolt-icon c-bolt-icon--marketing-gray c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   data-name="Layer 1"
                   viewbox="0 0 32 32"
              >
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M30.3 8.8H28a13.7 13.7 0 012 7.2A14 14 0 1116 2a14.5 14.5 0 017.4 2.1V1.8A15.3 15.3 0 0016 0a16 16 0 1016 16 15.6 15.6 0 00-1.7-7.2"
                      data-name="Fill-1"
                >
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M16 8a8.2 8.2 0 013.1.6l1.5-1.5A10.4 10.4 0 0016 6a10 10 0 1010 10 9.4 9.4 0 00-1.2-4.7l-1.5 1.5A8.8 8.8 0 0124 16a8 8 0 11-8-8"
                      data-name="Fill-4"
                >
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M16 16.5a.5.5 0 11.5-.5.5.5 0 01-.5.5zm.9-2.8a3 3 0 00-.9-.2 2.5 2.5 0 102.5 2.5 2.4 2.4 0 00-.2-.9L25.4 8H30V6h-2.6l1.8-1.8-1.4-1.4L26 4.5V2h-2v4.6z"
                      data-name="Fill-6"
                >
                </path>
              </svg>
            </span>
          </bolt-icon>
        </span>
        <span id="js-bolt-navbar-title-12345"
              class="c-bolt-navbar__title-text c-bolt-navbar__title-text--hide-from-xsmall-bp"
        >
          Go to
        </span>
      </div>
    </h2>
    <div class="c-bolt-navbar__list-wrapper js-bolt-navbar__list-wrapper">
      Array
    </div>
  </div>
</nav>
`;

exports[`<bolt-navbar> Component <bolt-navbar> with a linked title 1`] = `
<nav data-bolt-more-text="More"
     aria-labelledby="js-bolt-navbar-title-12345"
     class="c-bolt-navbar c-bolt-navbar--spacing-small t-bolt-light"
>
  <div class="c-bolt-navbar__inner">
    <h1 class="c-bolt-navbar__title">
      <div class="c-bolt-navbar__title-inner">
        <span class="c-bolt-navbar__title-icon">
          <bolt-icon name="bolt-logo-colored"
                     size="large"
                     aria-hidden="true"
          >
            <span class="c-bolt-icon c-bolt-icon--bolt-logo-colored c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   viewbox="0 0 198 182"
              >
                <g fill="none"
                   fill-rule="evenodd"
                >
                  <path fill="#FFCC4C"
                        d="M72.8 49h52.5c1 0 1.7.8 1.7 1.8v31.5c0 1-.8 1.7-1.8 1.7H72.7c-1 0-1.7-.8-1.7-1.7V50.8c0-1 .8-1.8 1.8-1.8z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M1 78.8l16.7-29c.3-.5 1-.8 1.5-.8h36c1 0 1.8.8 1.8 1.8v31.5c0 1-.8 1.7-1.8 1.7H4.1a3.5 3.5 0 01-3-5.2z"
                  >
                  </path>
                  <path fill="#E1E2EB"
                        d="M141 82.3V50.8c0-1 .8-1.8 1.7-1.8h36c.7 0 1.3.3 1.6.9l16.6 28.9a3.5 3.5 0 01-3 5.2h-51.2c-1 0-1.7-.8-1.7-1.7z"
                  >
                  </path>
                  <path fill="#F63"
                        d="M85 1.8v31.4c0 1-.8 1.8-1.8 1.8H29.4a1.8 1.8 0 01-1.5-2.6L42.5 7a14 14 0 0112-7h28.8c1 0 1.7.8 1.7 1.8z"
                  >
                  </path>
                  <path fill="#FFCC4C"
                        d="M100.8 0h42.6c5 0 9.6 2.7 12.1 7l14.7 25.4a1.7 1.7 0 01-1.5 2.6h-68c-1 0-1.7-.8-1.7-1.7V1.8c0-1 .8-1.8 1.8-1.8z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M42.5 175l-14.7-25.4a1.8 1.8 0 011.5-2.6h68c1 0 1.7.8 1.7 1.8v31.4c0 1-.8 1.8-1.8 1.8H54.6a14 14 0 01-12.1-7z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M114.7 147h54a1.8 1.8 0 011.5 2.6L155.5 175a14 14 0 01-12 7h-28.8c-1 0-1.7-.8-1.7-1.7v-31.5c0-1 .8-1.8 1.7-1.8z"
                  >
                  </path>
                  <path fill="#6C79D9"
                        d="M71 99.8v31.5c0 1-.8 1.7-1.8 1.7h-50c-.6 0-1.2-.3-1.5-.9L1.1 103.2A3.5 3.5 0 014 98h65.1c1 0 1.8.8 1.8 1.7z"
                  >
                  </path>
                  <path fill="#12B3B3"
                        d="M86.7 98H194a3.5 3.5 0 013 5.2l-16.6 29c-.3.5-1 .8-1.5.8h-92c-1 0-1.8-.8-1.8-1.8V99.8c0-1 .8-1.8 1.7-1.8z"
                  >
                  </path>
                </g>
              </svg>
            </span>
          </bolt-icon>
        </span>
        <span id="js-bolt-navbar-title-12345"
              class="c-bolt-navbar__title-text c-bolt-navbar__title-text--hide-from-xsmall-bp"
        >
          Go to
        </span>
      </div>
    </h1>
    <div class="c-bolt-navbar__list-wrapper js-bolt-navbar__list-wrapper">
      Array
    </div>
  </div>
</nav>
`;

exports[`<bolt-navbar> Component <bolt-navbar> without a title 1`] = `
<nav data-bolt-more-text="More"
     class="c-bolt-navbar c-bolt-navbar--spacing-small t-bolt-dark"
>
  <div class="c-bolt-navbar__inner">
    <div class="c-bolt-navbar__title">
      <div class="c-bolt-navbar__title-inner">
        <span class="c-bolt-navbar__title-text c-bolt-navbar__title-text--hide-from-xsmall-bp">
          Go to
        </span>
      </div>
    </div>
    <div class="c-bolt-navbar__list-wrapper js-bolt-navbar__list-wrapper">
      Array
    </div>
  </div>
</nav>
`;

exports[`<bolt-navbar> Component <bolt-navbar> without links 1`] = `
<nav data-bolt-more-text="More"
     aria-labelledby="js-bolt-navbar-title-12345"
     class="c-bolt-navbar c-bolt-navbar--spacing-small t-bolt-dark"
>
  <div class="c-bolt-navbar__inner">
    <h2 class="c-bolt-navbar__title">
      <div class="c-bolt-navbar__title-inner">
        <span class="c-bolt-navbar__title-icon">
          <bolt-icon name="marketing-gray"
                     size="large"
                     aria-hidden="true"
          >
            <span class="c-bolt-icon c-bolt-icon--marketing-gray c-bolt-icon--large">
              <svg class="c-bolt-icon__icon c-bolt-icon__icon--large"
                   xmlns="http://www.w3.org/2000/svg"
                   data-name="Layer 1"
                   viewbox="0 0 32 32"
              >
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M30.3 8.8H28a13.7 13.7 0 012 7.2A14 14 0 1116 2a14.5 14.5 0 017.4 2.1V1.8A15.3 15.3 0 0016 0a16 16 0 1016 16 15.6 15.6 0 00-1.7-7.2"
                      data-name="Fill-1"
                >
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M16 8a8.2 8.2 0 013.1.6l1.5-1.5A10.4 10.4 0 0016 6a10 10 0 1010 10 9.4 9.4 0 00-1.2-4.7l-1.5 1.5A8.8 8.8 0 0124 16a8 8 0 11-8-8"
                      data-name="Fill-4"
                >
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      fill-rule="evenodd"
                      d="M16 16.5a.5.5 0 11.5-.5.5.5 0 01-.5.5zm.9-2.8a3 3 0 00-.9-.2 2.5 2.5 0 102.5 2.5 2.4 2.4 0 00-.2-.9L25.4 8H30V6h-2.6l1.8-1.8-1.4-1.4L26 4.5V2h-2v4.6z"
                      data-name="Fill-6"
                >
                </path>
              </svg>
            </span>
          </bolt-icon>
        </span>
        <span id="js-bolt-navbar-title-12345"
              class="c-bolt-navbar__title-text c-bolt-navbar__title-text--hide-from-xsmall-bp"
        >
          Go to
        </span>
      </div>
    </h2>
  </div>
</nav>
`;
